--- a/src/app/assignment/assignment-nav/assignment-nav.component.html
+++ b/src/app/assignment/assignment-nav/assignment-nav.component.html
@@ -45,7 +45,7 @@
     <ul class="nav navbar-nav navbar-right">
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-          {{userName}}<span class="caret"></span>
+          <span class="caret"></span>
         </a>
         <ul class="dropdown-menu">
           <li><a (click)="logout()">退出</a></li>
