--- a/src/app/assignment/question-header/question-header.component.html
+++ b/src/app/assignment/question-header/question-header.component.html
@@ -14,10 +14,10 @@
     <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                {{userName}}<span class="caret"></span>
+                <span class="caret"></span>
             </a>
             <ul class="dropdown-menu">
-                <li><a (click)="logout()">退出</a></li>
+                <li><a>退出</a></li>
             </ul>
         </li>
     </ul>
