--- a/src/app/view/course/course-list-item/course-list-item.component.html
+++ b/src/app/view/course/course-list-item/course-list-item.component.html
@@ -1,6 +1,6 @@
 <div class="col-md-3">
     <div class="thumbnail">
-        <img src="../../../../public/resources/img/1.jpg" alt="...">
+        <img src="../../../../assets/resources/img/1.jpg" alt="...">
         <div class="caption" >
             <h5>{{classInfo.className}}</h5>
 
