--- a/src/app/view/login_register/register/register.component.html
+++ b/src/app/view/login_register/register/register.component.html
@@ -39,12 +39,12 @@
       <div class="form-group">
         <label class="radio-inline">
           <input type="radio" name="type" id="inlineRadio1"
-                 value="teacher" data-toggle="radio">
+                 value="teacher" data-toggle="radio" required ngModel>
           教师
         </label>
         <label class="radio-inline">
           <input type="radio" name="type" id="inlineRadio2"
-                 value="student" data-toggle="radio">
+                 value="student" data-toggle="radio" required ngModel>
           学生
         </label>
       </div>
