修改footer的样式

--- a/src/app/search-class/search-result-item/search-result-item.component.html
+++ b/src/app/search-class/search-result-item/search-result-item.component.html
@@ -1,9 +1,8 @@
 <div class="col-md-3">
     <div class="thumbnail">
-        <img src="../../../../public/resources/img/1.jpg" alt="...">
+        <img src="/src/assets/resources/img/1.jpg" alt="...">
         <div class="caption">
             <h3>{{classInfo.className}}</h3>
-
             <p>{{classInfo.classId}}</p>
             <button class="btn btn-primary" data-toggle="modal" data-target="#verifyCodeModal" >加入班级</button>
         </div>
