--- a/src/app/view/course/index/index.component.html
+++ b/src/app/view/course/index/index.component.html
@@ -1,58 +1,60 @@
-<app-navbar></app-navbar>
+<div id="container">
+  <app-navbar></app-navbar>
 
-<div class="container" >
-  <div class="tab-content">
-    <div class="tab-pane active" id="1">
-      <app-course-list></app-course-list>
-    </div>
-    <div id="2" class="tab-pane">
-      <form ngNativeValidate role="form" #f="ngForm"
-            (ngSubmit) = "onSubmit(f.value)">
-        <div class="form-group">
-          <input type="text"
-                 class="form-control"
-                 id="inputName"
-                 name="name"
-                 placeholder="名称" ngModel>
-        </div>
+  <div class="container" >
+    <div class="tab-content">
+      <div class="tab-pane active" id="1">
+        <app-course-list></app-course-list>
+      </div>
+      <div id="2" class="tab-pane">
+        <form ngNativeValidate role="form" #f="ngForm"
+              (ngSubmit) = "onSubmit(f.value)">
+          <div class="form-group">
+            <input type="text"
+                   class="form-control"
+                   id="inputName"
+                   name="name"
+                   placeholder="名称" ngModel>
+          </div>
 
-        <div class="form-group">
-          <input type="text"
-                 class="form-control"
-                 id="inputClassId"
-                 name="classId"
-                 placeholder="班级" ngModel>
-        </div>
+          <div class="form-group">
+            <input type="text"
+                   class="form-control"
+                   id="inputClassId"
+                   name="classId"
+                   placeholder="班级" ngModel>
+          </div>
 
-        <div class="form-group">
-          <input type="text"
-                 class="form-control"
-                 id="inputUser"
-                 name="userId"
-                 placeholder="用户" ngModel>
-        </div>
+          <div class="form-group">
+            <input type="text"
+                   class="form-control"
+                   id="inputUser"
+                   name="userId"
+                   placeholder="用户" ngModel>
+          </div>
 
-        <div class="form-group">
-          <input type="file"
-                 ngFileSelect
-                 [options]="options"
-                 [events]="events"
-                 (onUpload)="handleUpload($event)"
-                 class="form-control"
-                 id="inputResource"
-                 name="mResource" ngModel>
-        </div>
-        <p>{{data | json}}</p>
+          <div class="form-group">
+            <input type="file"
+                   ngFileSelect
+                   [options]="options"
+                   [events]="events"
+                   (onUpload)="handleUpload($event)"
+                   class="form-control"
+                   id="inputResource"
+                   name="mResource" ngModel>
+          </div>
+          <p>{{data | json}}</p>
 
-        <button type="submit" class="btn btn-primary">提交</button>
-      </form>
+          <button type="submit" class="btn btn-primary">提交</button>
+        </form>
 
 
+      </div>
     </div>
   </div>
-</div>
 
-<app-footer></app-footer>
+  <app-footer></app-footer>
+</div>
 
 
 
