改进编辑passage的样式
让托福阅读的文章可以有黑体，阴影，放大等功能
第一次添加一个初级的audioplayer，用于单词听写

--- a/src/app/assignment/question-group-list/question-group-detail/tpo-reading-question-detail/tpo-reading-question-detail.component.html
+++ b/src/app/assignment/question-group-list/question-group-detail/tpo-reading-question-detail/tpo-reading-question-detail.component.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="col-md-7" id="passage">
-            <p>{{question.passage}}</p>
+            <div [froalaView]="question.passage"></div>
         </div>
 
     </div>
