--- a/src/app/edit-assignment/edit-question/edit-tporeading-question/edit-tporeading-question.component.html
+++ b/src/app/edit-assignment/edit-question/edit-tporeading-question/edit-tporeading-question.component.html
@@ -1,45 +1,11 @@
 <div class="container">
-   <!-- <div class="row" >
-        <div class="col-sm-8">
-            <fieldset *ngIf="content">
-                <legend>阅读文章</legend>
-                <div class="vocabulary-list">
-                    <!--第一列单词
-                    <div class="col-sm-6">
-                        <p>{{content}}</p>
-                    </div>
-                </div>
-            </fieldset>
-            <fieldset *ngIf="!content">
-                <legend>添加词汇</legend>
-                <form ngNativeValidate class="form-inline"
-                      #form1="ngForm" (ngSubmit)="addContent(form1)">
-                    <div class="form-group">
-                        <label>文章段落</label>
-                        <textarea class="form-control"
-                                  rows="10"
-                                  id="passageContent"
-                                  name="passageContent"
-                                  ngModel
-                                  required></textarea>
-                    </div>
-
-                    <button type="submit" class="btn-primary">确定</button>
-                </form>
-            </fieldset>
-        </div>
-    </div>
--->
     <div class="row">
         <form ngNativeValidate #form1="ngForm" (ngSubmit)="addQuestion(form1)">
         <div class="form-group">
             <label>文章段落</label>
-            <textarea class="form-control"
-                      rows="10"
-                      id="passage"
-                      name="passage"
-                      ngModel
-                      required></textarea>
+            <textarea class="form-control" [froalaEditor]="EditorOptions"
+                      id="passage" [(froalaModel)]="editorPassage"
+                      rows="10" required ></textarea>
         </div>
 
         <div class="form-group">
