修改背单词功能，添加批改模式
1.背单词从选择题->听写
2.查看是在questiongroupList中查看
3.增加了批改模式，听写的题目分数不是自动生成，需要老师打分

--- a/src/app/assignment/edit-assignment/edit-question-list/edit-question-list.component.html
+++ b/src/app/assignment/edit-assignment/edit-question-list/edit-question-list.component.html
@@ -1,10 +1,10 @@
 <div *ngFor="let group of groupList;let i = index;">
     <div [ngSwitch]="group.type">
-        <app-vocabulary-item
+        <edit-app-vocabulary-item
                 *ngSwitchCase="assignmentService.getVocabularyQuestionType()"
                 [group]="group"
         >
-        </app-vocabulary-item>
+        </edit-app-vocabulary-item>
         <app-tpo-reading-item
                 [group]="group"
                 *ngSwitchCase="assignmentService.getTPOReadingQuestionType()">
