--- a/src/app/assignment/question-group-list/question-group-detail/vocabulary-question-detail/vocabulary-question-detail.component.html
+++ b/src/app/assignment/question-group-list/question-group-detail/vocabulary-question-detail/vocabulary-question-detail.component.html
@@ -6,41 +6,27 @@
 <div class="container" *ngIf="getCurrentIndex() < getContentPage()">
     <fieldset class="word-list">
         <legend>词汇列表</legend>
-        <div class="vocabulary-list">
-            <!--第一列单词-->
-            <div class="col-sm-6">
-                <table class="table table-bordered">
-                    <thead>
-                    <tr>
-                        <th></th>
-                        <th>英文</th>
-                        <th>中文</th>
-                    </tr>
-                    </thead>
-
-                    <tbody>
-                    <tr *ngFor="let word of wordList;let i = index">
-                        <th>{{i + 1}}</th>
-                        <td>{{word.english}}</td>
-                        <td>{{word.chinese}}</td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
+        <p>背诵下列单词：</p>
+        <app-vocabulary-list [wordList]="wordList"></app-vocabulary-list>
     </fieldset>
 </div>
 
 <div class="container" *ngIf="getCurrentIndex() >= getContentPage()">
     <div class="row">
-        <div class="col-md-8 col-md-offset-2" id="question">
-            <h5><strong>{{question.question}}</strong></h5>
-            <label class="radio" *ngFor="let option of question.options; let i = index">
-                <input type="radio" [(ngModel)]="answer"
-                       (change)="changeAnswer()" name="choices"
-                       id="option{{i}}" [value]=" i | convert09ToAZ" checked="">
-                {{i|convert09ToAZ}}. {{option}}
-            </label>
+        <div class="col-sm-10 col-md-offset-2" id="question">
+
+            <p>请写出该单词的中英文： <app-simple-audio-player [src]="question.question|pronunciationOfWord"></app-simple-audio-player></p>
+            <textarea type="text" [(ngModel)]="answer" rows="2" cols="50"
+                      (change)="changeAnswer()" [disabled]="reviewMode() || markingMode()"></textarea>
         </div>
     </div>
+
+    <div class="row" *ngIf="!homeWorkMode()">
+        <div class="col-sm-10 col-md-offset-2">
+            <p [ngClass]="{'text-success':correct(),'text-danger':!correct()}">学生答案：{{answer}}</p>
+            <p style="color:#2ECC71;">正确答案：{{question.answer}}</p>
+        </div>
+    </div>
+    <app-question-marker *ngIf="markingMode()" [score]="question.score || 1" (marking)="updateScore($event)"></app-question-marker>
 </div>
+
