--- a/src/app/assignment/question-group-list/question-group-detail/common/question-pager/question-pager.component.html
+++ b/src/app/assignment/question-group-list/question-group-detail/common/question-pager/question-pager.component.html
@@ -5,7 +5,7 @@
                     type="button"
                     (click)="preQuestion()">
                 <span class="glyphicon glyphicon-chevron-left"></span>
-                {{content}}
+                {{getPagerContent()}}
             </button>
         </li>
         <li class="next">
