--- a/src/app/assignment/question-group-list/question-group-detail/tpo-reading-question-detail/tpo-reading-question-detail.component.html
+++ b/src/app/assignment/question-group-list/question-group-detail/tpo-reading-question-detail/tpo-reading-question-detail.component.html
@@ -1,15 +1,4 @@
-<app-question-pager [content]="getPagerContent()"
-                    (next)="next()" (pre)="pre()"
-></app-question-pager>
-
-<div class="container" *ngIf="getCurrentIndex() < getContentPage()">
-    <div class="tpo-passage">
-        <h5>阅读以下文章，然后做题</h5>
-        <p>{{passage}}</p>
-    </div>
-</div>
-
-<div class="container" *ngIf="getCurrentIndex() >= getContentPage()">
+<div class="container" *ngIf="question">
     <div class="row">
         <div class="col-md-5" id="question">
             <p><strong>{{question.question}}</strong></p>
@@ -36,9 +25,9 @@
     </div>
 
     <div class="row" *ngIf="!homeWorkMode()">
-        <div class="col-sm-12">
-            <p>你的选择：{{answer}}</p>
-            <p>正确答案：{{question.answer}}</p>
+        <div class="col-sm-10">
+            <p [ngClass]="{'text-success':correct(),'text-danger':!correct()}">学生答案：{{answer}}</p>
+            <p style="color:#2ECC71;">正确答案：{{question.answer}}</p>
         </div>
     </div>
 
