--- a/src/app/assignment/question-group-list/question-header/question-header.component.html
+++ b/src/app/assignment/question-group-list/question-header/question-header.component.html
@@ -11,14 +11,9 @@
         </li>
     </ul>
 
-    <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                <span class="caret"></span>
-            </a>
-            <ul class="dropdown-menu">
-                <li><a>退出</a></li>
-            </ul>
+    <ul *ngIf="homeworkMode()" class="nav navbar-nav navbar-right">
+        <li>
+            <app-question-timer></app-question-timer>
         </li>
     </ul>
 
