添加TPO口语模块

--- a/src/app/assignment/edit-assignment/edit-question/edit-question.component.html
+++ b/src/app/assignment/edit-assignment/edit-question/edit-question.component.html
@@ -24,5 +24,10 @@
         [assignmentId]="assignmentId"
         [groupId]="questionGroupId"
     ></app-edit-tpolistening-question>
+    <app-edit-tpospeaking-question
+        *ngSwitchCase="'tpo_speaking'"
+        [assignmentId]="assignmentId"
+        [groupId]="questionGroupId"
+    ></app-edit-tpospeaking-question>
 </div>
 
