--- a/src/app/shared/view/footer/footer.component.html
+++ b/src/app/shared/view/footer/footer.component.html
@@ -2,5 +2,5 @@
     <md-icon>edit</md-icon>
     <h6>琢玉课堂</h6>
     <span fxFlex></span>
-    <p>Code licensed under an MIT-style License.</p>
+    <p>今日始，明日歌</p>
 </footer>
